--- a/configs/config.json
+++ b/configs/config.json
@@ -15,6 +15,7 @@
     "batch_size": 10,
     "enable_SAP": true,
     "start_epoch":0,
+    "skip_ada_multi_losses_norm": false,
     
     "learning_rate": 0.001,
     "height": 256,
