--- a/configs/config.json
+++ b/configs/config.json
@@ -39,7 +39,7 @@
       },
       "model_checkpoint": {
         "enabled": true,
-        "filename_pattern": "wat_stacked_unets_epoch-{epoch:02d}_val_loss-{val_loss:.4f}.h5"
+        "filename_pattern": "wat_stacked_unets_epoch-{epoch:02d}_val_loss-{val_loss:.4f}"
       }
     }
   }
